@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2005, 2006, 2007, 2008, 2009, 2010, 2011 Apple Inc. All rights reserved.
+ * Copyright (C) 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012 Apple Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
@@ -355,9 +355,12 @@ void RenderThemeMac::platformColorsDidChange()
 
 Color RenderThemeMac::systemColor(int cssValueId) const
 {
-    if (m_systemColorCache.contains(cssValueId))
-        return m_systemColorCache.get(cssValueId);
-    
+    {
+        HashMap<int, RGBA32>::iterator it = m_systemColorCache.find(cssValueId);
+        if (it != m_systemColorCache.end())
+            return it->second;
+    }
+
     Color color;
     switch (cssValueId) {
         case CSSValueActiveborder:
